Fix spacing for video pages

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,4 +1,4 @@
-.heading2Xl {
+.heading2XlHome {
     opacity: 0;
     font-size: 2.5rem;
     line-height: 1.2;
@@ -20,6 +20,14 @@
     -ms-animation: fadeIn ease 2s;
     -ms-animation-delay: .5s;
     -ms-animation-fill-mode: forwards;
+}
+
+.heading2Xl {
+    font-size: 2.5rem;
+    line-height: 1.2;
+    font-weight: 800;
+    letter-spacing: -0.05rem;
+    margin: 1rem 0;
 }
 
 .headingXl {
